# oxebot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  oxebot.py  oxebot_example.py  oxebot_sample.py  pyproject.toml  requirements.txt
contrib/: env-sample
src/oxebot/: oxebot.py  utils.py
