[tool.poetry]
name = "oxebot"
version = "0.1.0"
description = ""
authors = ["yzakius <dev@yzakius.me>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
python-decouple = "^3.4"
pyTelegramBotAPI = "^4.6.0"

[tool.poetry.dev-dependencies]
cryptography = "^37.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
